--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,33 @@ body {
     font-family: "Roboto-Regular";
     background-color: azure;
 }
-h1{
+
+#menu {
+    display: flex;
+    width: fit-content;
+    margin-top: 10px;
+    gap: 10px;
+    margin: auto;
+}
+
+.mode {
+    background-color: rgb(240, 252, 217);
+    cursor: pointer;
+    width: 150px;
+    height: 60px;
+    font-size: 15px;
+    font-family: 'Roboto-Regular';
+}
+
+h1 {
     text-align: center;
     background-color: beige;
-    width: 500px;
+    width: 450px;
     margin: auto;
     margin-top: 50px;
+    margin-bottom: 10px;
     padding: 10px;
-    font-size: 60px;
+    font-size: 45px;
 }
 
 .row {
@@ -28,40 +47,41 @@ h1{
 
 }
 
-.pion{
+.pion {
     width: 100px;
     display: flex;
 
 }
 
-#rejouer{
+#rejouer {
     text-align: center;
-    margin: 100px;
+    margin: 50px;
 }
 
-#error{
+#error {
     font-family: 'Roboto-Regular';
     font-size: 30px;
     text-align: center;
     margin: 10px;
 }
 
-.bouton{
-    background-color: rgb(251, 251, 191);
+.bouton {
+    background-color: rgb(240, 252, 217);
     cursor: pointer;
     width: 200px;
     height: 60px;
     font-size: 30px;
     padding: 10px;
+    font-family: 'Roboto-Regular';
 }
 
-#end{
+#end {
     font-family: 'Roboto-Regular';
     font-size: 30px;
 }
 
 #gameContainer {
-  
+
     width: fit-content;
     margin: auto;
     margin-top: 100px;
@@ -69,8 +89,11 @@ h1{
     flex-direction: column;
 }
 
+.hidden {
+    display: none;
+}
+
 @font-face {
     font-family: Roboto-Regular;
     src: url(../assets/font/Roboto-Regular.ttf);
 }
-
